css/common.css
/* ... */
/* 800〜1004px：ヘッダーとハンバーガーを中間サイズに縮小 */
@media screen and (max-width: 1004px) {
	header { height: 20rem; padding: 2.5rem; }
	main { padding-top: 20rem; }
	header .logo img { width: 22rem; }
	header .toggle-button { width: 12rem; height: 12rem; padding-top: 2.2rem; gap: 0.8rem; font-size: 2rem; border-radius: 0.8rem; }
	header .toggle-button .line { gap: 1rem; }
	header .toggle-button .line span { height: 0.8rem; width: 7rem; }
	#head_submenu .close-button { width: 12rem; height: 12rem; padding-top: 3rem; gap: 1.5rem; font-size: 2rem; border-radius: 0.8rem; top: 2.5rem; right: 2.5rem; }
	#head_submenu .close-button .line span { height: 0.8rem; width: 7rem; }
}

/* =================================================================
フッター
=================================================================*/
.backtotop {position: fixed; right: 50px; bottom: 60px; width: 70px; height: 70px; background: none; z-index: 100;}

footer {background: #5C4636; color: #fff; padding: 70px 0 64px;}
footer .inner {width: 100%; max-width: 1160px; margin: auto; display: flex; justify-content: space-between; padding: 40px 0;}

footer .left-box {display: flex; flex-direction: column; justify-content: space-between;}
footer .left-box .top {display: flex; flex-direction: column; gap: 25px;}
footer .left-box .top a {display: flex; align-items: center; background: #fff; border-radius: 10px; width: 380px; height: 70px; padding: 0 20px; font-size: 28px; color: #5C4636; font-weight: bold; box-shadow: 0px 5px 0px 0px #C9CACA;}
footer .left-box .top img {display: block; margin-right: 24px;}

footer .left-box .bottom p {font-size: 18px; font-weight: normal; margin-top: 17px;}
footer .left-box .bottom a {color: #fff; font-size: 21px; font-weight: bold; margin-top: 24px; display: inline-block;}

footer .right-box .box {min-height: 253px;}
footer .right-box {display: flex;}
footer .right-box p {font-size: 24px; font-weight: bold; line-height: 1;}
footer .right-box ul {display: flex; flex-direction: column; gap: 15px; padding-left: 20px; margin-top: 15px;}
footer .right-box li a {font-size: 18px; color: #fff; font-weight: normal;}

footer .right-box .menu {border-right: 1px solid #fff; padding-right: 70px;}
footer .right-box .menu:last-child {border-right: 0; padding-right: 0; padding-left: 60px;}

footer .sp-menu {display: none;}

@media screen and (max-width: 1199px) {
	.backtotop {right: 4rem; bottom: 4rem;}
	footer {padding: 6rem 4rem 2.4rem;}
	footer .inner {padding: 0;}
	footer .sp-menu {display: block;}
	footer .sp-menu {width: 100%; border-top: 1px solid #fff; margin-top: 8rem;}
	footer .sp-menu_box {border-bottom: 1px solid #fff;}
	footer .sp-menu_box .list {display: none;}
	footer .sp-menu_box .title {font-size: 4.4rem; padding: 3rem 3.2rem; display: block; font-weight: bold; color: #fff; position: relative;}
	footer .sp-menu_box .title.accordion-toggle:before {content: ""; display: block; width: 4rem; height: 0.2rem; background: #fff; position: absolute; right: 4rem; top: 0; bottom: 0; margin: auto;}
	footer .sp-menu_box .title.accordion-toggle:after {content: ""; display: block; width: 0.2rem; height: 4rem; background: #fff; position: absolute; right: 5.8rem; top: 0; bottom: 0; margin: auto;}
	footer .sp-menu_box .title.is-open:after  {display: none;}
	footer .sp-menu_box .list-inner {display: flex; flex-direction: column; align-items: flex-start; padding-left: 19rem; gap: 2.6rem; padding-bottom: 5.6rem;}
	footer .sp-menu_box .list-inner a {font-size: 3.6rem; color: #fff; position: relative; display: block; width: 100%;}
	footer .sp-menu_box .list-inner a:after {content: ''; position: absolute; top: 0; bottom: 0; right: 5.2rem; width: 1.6rem; height: 1.6rem; margin: auto; border-top: 1px solid #fff; border-right: 1px solid #fff; transform: rotate(45deg); box-sizing: border-box;}

	footer .left-box {width: 100%;}
	footer .left-box .top {gap: 3rem; padding: 0;}
	footer .left-box .top a {display: flex; align-items: center; background: #fff; border-radius: 2rem; width: 70rem; height: 14rem; padding: 0 4rem; font-size: 5.6rem; color: #5C4636; font-weight: bold; gap: 1.5rem; letter-spacing: -0.3rem;}
	footer .left-box .top a img {margin: 0;}
	footer .left-box .access ul {display: none;}

	footer .right-box {display: none;}

}


/* =================================================================
共通リンク
=================================================================*/
.other-links .list {justify-content: center; gap: 45px;}
.other-links img {display: block; max-width: 540px; width: 100%;}
.other-links a {position: relative;}
.other-links a span {display: flex; justify-content: center; align-items: center; border-radius: 9999px; background: #5C4636; width: 300px; height: 60px; color: #fff; position: absolute; left: 0; right: 0; bottom: 30px; margin: auto; font-size: 19px;}
.other-links a span:after {content: ""; display: block; width: 8px; height: 13px; background-image: url('../img/common/cmn-button_arrow.svg'); background-size: cover; position: absolute; right: 24px; top: 0; bottom: 0; margin: auto;}

@media screen and (max-width: 1199px) {
.other-links img {max-width: 100%;}
/* iOS Safari: overflow:hidden on main can prevent absolute-positioned span backgrounds from painting.
   Adding overflow:hidden + GPU-compositing to the <a> fixes this. */
.other-links a {display: block; overflow: hidden; -webkit-transform: translateZ(0); transform: translateZ(0);}
.other-links a span {top: auto; bottom: 2.5rem; width: 52rem; max-width: calc(100% - 4rem); height: 10rem; font-size: 3.4rem;}
.other-links a span:after {width: 1.6rem; height: 2.4rem;}
}
/* ... */

